samples/_failures_safe/1761519896_727f49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e4c3299.c: In function ‘execute_graph_operation’:
./samples/SAFE/__tmp_7e4c3299.c:158:16: error: expected ‘;’ at end of input
  158 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_7e4c3299.c:158:9: error: expected declaration or statement at end of input
  158 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_7e4c3299.c:158:9: error: expected declaration or statement at end of input
